--- a/assets/style.css
+++ b/assets/style.css
@@ -53,9 +53,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-body {
 
-}
 section {
 	margin-block: 6em;
 }
@@ -120,6 +118,7 @@ header {
 	z-index: -1;
 	object-fit: cover;
 	object-position: center;
+	flex-shrink: 0;
 }
 /* Code CSS en prévision de l'ajout d'un carousel pour la bannière */
 /* Gestion des fleches du carrousel */
